fixes contrast for square texts

--- a/tic-tac-toe/src/App.css
+++ b/tic-tac-toe/src/App.css
@@ -168,7 +168,7 @@ div.infoboard div.details {
 
 .turn {
   font-size: 1.1rem;
-  margin: 0px 0.5`rem;
+  margin: 0px 0.5rem;
   color: #b2bfc5;
 }
 
@@ -247,7 +247,7 @@ div.infoboard div.playerstats {
 }
 
 .test-status{
-  background-color: #2cbbaf8c;
+  background-color: #e9950f;
 }
 
 
